1.4.0 2024xxxx
CR: Service: Optimization of the configuration via environment variables
    Simplifies the provision as a container.
    - XMEX_STORAGE_DIRECTORY: Directory of the data storage (./data)
    - XMEX_STORAGE_QUANTITY: Maximum number of files in data storage (65535)
    - XMEX_STORAGE_SPACE: Maximum data size of files in data storage in bytes (256 *1024)
    - XMEX_STORAGE_EXPIRATION: Maximum idle time of the files in seconds (15 *60)
    TODO: Add description in manual
    TODO: Test
CR: Request: Omission of prefix Base64: for Base64 encoded paths
    old: /xmex!Base64:Ly9ib29rW2xhc3QoKV0vY2hhcHRlcltsYXN0KCld
    new: /xmex!Ly9ib29rW2xhc3QoKV0vY2hhcHRlcltsYXN0KCld
    TODO: Add description in manual
    TODO: Test
CR: Request: Omission of prefix 0x for hex encoded paths
    old: /xmex!0x282f626f6f6b73292f2f6c6173743a3a6265666f7265
    new: /xmex!282f626f6f6b73292f2f6c6173743a3a6265666f7265
    TODO: Add description in manual
    TODO: Test

1.3.1 20240801
BF: Review: Optimization/Corrections
BF: Build: Optimization / correction of the release info process
CR: Build: Releases are now only available on the release page
CR: OpenAPI: Added the missing OpenAPI Specification
CR: Project: Moved repository to xml-micro-exchange-php
NT: Harmonization of version numbers for the different implementations
    Major and minor describe the API, patch refers to the implementation.
    The version of OpenAPI therefore only uses major and minor, patch is always 0.

1.3.0 20210525
BF: Service: Uniform use of status 204 for 202 / 404
    Status 404 always refers storage and not entities/addressed targets in the storage.
BF: Service: Uniform use of status 204 for 404 in relation to targets in the storage (axes)
    Status 404 is now only used in relation to storage.
    Addressed targets (axes) use status 204 in combination with the response header Storage-Effects.
BF: Service: Optimization/harmonization of content types for XML
    Fragments (PUT/PATCH) uses text/xhtml